--- a/GolgedarGame.csproj
+++ b/GolgedarGame.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <RootNamespace>SFML_Game</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
@@ -14,14 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include=".Sources\.Source.cs" />
+    <Compile Include=".Resources\.Resource.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include=".Sources\.Images\Player.png">
+    <None Include=".Resources\.Images\Player.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include=".Sources\.Images\Wall.png">
+    <None Include=".Resources\.Images\Wall.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -35,6 +35,10 @@
     <Reference Include="GolgedarEngine">
       <HintPath>GolgedarEngine.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
